--- a/WebContent/css/index/index.css
+++ b/WebContent/css/index/index.css
@@ -8,11 +8,10 @@
 
 #head{
 	position: relative;
-    width: 1100px;
+    max-width: 1100px;
     height: 104px;
     margin: 0 auto;
     padding: 0;
-    background-color: yellow;
 }
 
 /*------------top logo-------------*/
@@ -33,7 +32,6 @@
 	width : 100%;
 	height: 22px;	
 	padding: 6px 0 6px 0px;
-	display: inline-block;
 }
 
 .top>span{
@@ -81,8 +79,76 @@
 
 #main_manu a:hover {
 		color: blue;
-	
 	}
+
+/*===========section================*/
+
+#main_container{
+	margin-top: 20px;
+}
+#content_1{
+	background-image
+	width: 100%;
+	height: 560px;
+
+}
+#content_2{
+	background-color: red;
+	width: 100%;
+	height: 157px;
+	padding: 50px 0px 40px;
+
+}
+#content_3{
+	background-color: green;
+	width: 100%;
+	height: 445px;
+
+}
+#content_4{
+	background-color: orange;
+	width: 100%;
+	height: 257px;
+	margin-top: 100px;
+	padding: 65px 0 100px;
+}
+#content_5{
+	background-color: purple;
+	width: 100%;
+	height: 475px;
+	padding-top: 82px;
+}
+#content_6{
+	background-color: yellow;
+	width: 100%;
+	height: 78px;
+	padding: 0 68px;
+}
+
+/*==================footer=====================*/
+
+ footer{
+    clear: both;
+    position: relative;
+    width: 100%;
+    height: 151px;
+	background-image:url("../../images/common/bg_foot.png");
+	
+}
+#ft_wrap{
+	position: relative;
+    max-width: 1100px;
+    height: 151px;
+    text-align: center;
+    margin: 0 auto;
+    line-height: 18px;
+	background-image:url("../../images/common/bg_foot_in.png");
+}
+
+
+
+
+
 
 
 
