--- a/WebContent/css/index/index.css
+++ b/WebContent/css/index/index.css
@@ -87,42 +87,66 @@
 	margin-top: 20px;
 }
 #content_1{
-	background-image
+	background-image:url("../../images/banner/bn01.png");
 	width: 100%;
 	height: 560px;
-
+}
+.con1_font{
+	color: white;
+	text-align: center;
+	padding-top: 280px;
+}
+.con1_font_1{
+	font-size: 30px;
 }
 #content_2{
-	background-color: red;
+	background-color:#ebecec;
 	width: 100%;
 	height: 157px;
-	padding: 50px 0px 40px;
-
+    font-size: 13px;
+    line-height: 18px;
+    color: #6b6969;
+    padding-top: 50px;
+    text-align: center;
+    padding-bottom: 40px;
 }
+.dt01{
+	font-size: 24px;
+    line-height: 26px;
+    color: #4c4b4b;
+    font-weight: 400px;
+}
+
 #content_3{
-	background-color: green;
 	width: 100%;
 	height: 445px;
-
 }
+
 #content_4{
 	background-color: orange;
 	width: 100%;
-	height: 257px;
+	height: 300px;
 	margin-top: 100px;
-	padding: 65px 0 100px;
+	padding: 65px 0 150px;
+	margin: 0 auto;
+
+}
+.con4_img{
+	text-align: center;
+	padding-bottom: 50px;
+}
+
+#content_4 >p{
+    color: white;
+    font-size: 21px;
+    padding-bottom: 20px;
+    text-align: center;
 }
 #content_5{
 	background-color: purple;
 	width: 100%;
 	height: 475px;
 	padding-top: 82px;
-}
-#content_6{
-	background-color: yellow;
-	width: 100%;
-	height: 78px;
-	padding: 0 68px;
 }
 
 /*==================footer=====================*/
@@ -143,9 +167,15 @@
     margin: 0 auto;
     line-height: 18px;
 	background-image:url("../../images/common/bg_foot_in.png");
+	color: white;
 }
-
-
+#ft_wrap > img{
+	padding-top: 32px;
+}
+#ft_wrap > p{
+	margin: 13px 0 9px;
+    color: #a9a9a9;
+}
 
 
 
