--- a/WebContent/css/index/index.css
+++ b/WebContent/css/index/index.css
@@ -99,6 +99,7 @@
 .con1_font_1{
 	font-size: 30px;
 }
+/*------------------------------------------------*/
 #content_2{
 	background-color:#ebecec;
 	width: 100%;
@@ -116,12 +117,12 @@
     color: #4c4b4b;
     font-weight: 400px;
 }
-
+/*-------------------------------------------------*/
 #content_3{
 	width: 100%;
 	height: 445px;
 }
-
+/*-------------------------------------------------*/
 #content_4{
 	background-color: orange;
 	width: 100%;
@@ -141,12 +142,58 @@
     font-size: 21px;
     padding-bottom: 20px;
     text-align: center;
+ /*--------------------------------*/
 }
 #content_5{
-	background-color: purple;
+	background-image:url("../../images/banner/bg_mid.png");
 	width: 100%;
 	height: 475px;
 	padding-top: 82px;
+}
+.con5_view{
+	overflow: hidden;
+    position: relative;
+    padding: 0;
+    height: 488px;
+    max-width: 1136px;
+    margin: 0 auto;
+}
+#content_5 ul{
+	list-style: none;
+}
+.con_5_ba1{
+    opacity: 1;
+    position: relative;
+    top: 0px;
+	
+}
+#content_5 dl{
+	padding-top: 20px;
+	padding-left: 6px;
+	
+}
+#content_5 dt{
+	display: block;
+    text-align: left;
+    height: 37px;
+    font-size: 24px;
+    line-height: 26px;
+    color: #353535;
+    font-weight: 400px;
+}
+#content_5 li{
+	float: left;
+    height: 378px;
+    width: 336px;
+    margin: 0 1.2%;
+    background: white;
+}
+.que {
+	margin: 15px 0 19px;
+    font-size: 16px;
+    line-height: 18px;
+    color: #353535;
+    font-weight: 300px;;
 }
 
 /*==================footer=====================*/
@@ -173,6 +220,7 @@
 	padding-top: 32px;
 }
 #ft_wrap > p{
+	font-size : 11px;
 	margin: 13px 0 9px;
     color: #a9a9a9;
 }
