--- a/WebContent/css/index/index.css
+++ b/WebContent/css/index/index.css
@@ -121,7 +121,51 @@
 #content_3{
 	width: 100%;
 	height: 445px;
+	background-color: black;
 }
+
+.con3_view{
+	overflow: hidden;
+    position: relative;
+    padding: 0;
+    height: 488px;
+    max-width: 1136px;
+    margin: 0 auto;
+}
+
+#content_3 ul{
+	list-style: none;
+}
+
+#content_3 dl{
+	padding-top: 20px;
+	padding-left: 6px;
+	
+}
+#content_3 dt{
+	display: block;
+    text-align: left;
+    height: 37px;
+    font-size: 24px;
+    line-height: 26px;
+    color: black;
+    font-weight: 400px;
+}
+#content_3 li{
+	float: left;
+    height: 378px;
+    width: 336px;
+    margin: 0 1.2%;
+    background: white;
+}
+.que {
+	margin: 15px 0 19px;
+    font-size: 16px;
+    line-height: 18px;
+    color: black;
+    font-weight: 300px;
+}
+
 /*-------------------------------------------------*/
 #content_4{
 	background-color: orange;
@@ -150,6 +194,7 @@
 	height: 475px;
 	padding-top: 82px;
 }
+
 .con5_view{
 	overflow: hidden;
     position: relative;
@@ -158,15 +203,11 @@
     max-width: 1136px;
     margin: 0 auto;
 }
+
 #content_5 ul{
 	list-style: none;
 }
-.con_5_ba1{
-    opacity: 1;
-    position: relative;
-    top: 0px;
-	
-}
+
 #content_5 dl{
 	padding-top: 20px;
 	padding-left: 6px;
@@ -178,7 +219,7 @@
     height: 37px;
     font-size: 24px;
     line-height: 26px;
-    color: #353535;
+    color: black;
     font-weight: 400px;
 }
 #content_5 li{
@@ -192,8 +233,8 @@
 	margin: 15px 0 19px;
     font-size: 16px;
     line-height: 18px;
-    color: #353535;
-    font-weight: 300px;;
+    color: black;
+    font-weight: 300px;
 }
 
 /*==================footer=====================*/
